objects/e_Customer__c.object
<CustomObject>
    <description>Customer</description>
    <fields>
        <fullName>Phone_Number__c</fullName>
        <label>Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>email__c</fullName>
        <description>Item Description</description>
        <label>email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>mailling_Adress__c</fullName>
        <description>mailling Adress</description>
        <label>mailling Adress</label>
        <type>TextArea</type>
    </fields>
    <label>e-Customer</label>
    <nameField>
        <label>e-Customer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>e-Customer</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>